Added Custom Margins and Changed index presentation
# Conflicts:
#	src/DynamoCoreWpf/Views/Preview/WatchTree.xaml

--- a/src/DynamoCoreWpf/UI/Themes/Modern/DynamoConverters.xaml
+++ b/src/DynamoCoreWpf/UI/Themes/Modern/DynamoConverters.xaml
@@ -159,7 +159,8 @@
     <controls:TreeViewLineMarginConverter x:Key="TreeViewLineMarginConverter" />
     <controls:TreeViewHLineMarginConverter x:Key="TreeViewHLineMarginConverter" />
     <controls:TreeViewVLineMarginConverter x:Key="TreeViewVLineMarginConverter" />
-    <controls:TreeViewMarginCheck x:Key="TreeViewMarginCheck"/>   
+    <controls:TreeViewMarginCheck x:Key="TreeViewMarginCheck"/>
+    <controls:LeftThicknessConverter x:Key="LeftThicknessConverter" />
     <controls:NestedContentMarginConverter x:Key="NestedContentMarginConverter"/>
     <controls:ClassViewMarginConverter x:Key="ClassViewMarginConverter" />
     <controls:ElementGroupToColorConverter x:Key="ElementGroupToColorConverter" />
@@ -192,4 +193,6 @@
                                       TrueBrush="{StaticResource KeepListStructureHighlight}"
                                       FalseBrush="{StaticResource NotKeepListStructureHighlight}">
     </controls:BooleanToBrushConverter>
+    
+    
 </ResourceDictionary>
